--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "devDependencies": {
     "coffee-script": "*"
   },
-
+ "scripts": {
+    "prepublish": "cake build"
+  },
   "main": "./lib/index.js"
 }
