--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,4 @@
-lib-cov
-*.seed
-*.log
-*.csv
-*.dat
-*.out
-*.pid
-*.gz
-.*
-.DS_Store*
-
-pids
-logs
-results
-
+.cake_task_cache
+.DS_Store
 node_modules
 npm-debug.log
