--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "keywords": ["logging", "winston", "email"],
   "dependencies": {
-    "nodemailer": "*",
+    "nodemailer": "*"
+  },
+  "peerDependencies": {
     "winston"   : "*"
   },
   "main": "./lib/index.js"
