--- a/package.json
+++ b/package.json
@@ -2,17 +2,21 @@
   "name": "winston-email",
   "description": "An email transport for winston",
   "author": "Pierre Herveou <pgherveou@gmail.com>",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "repository": {
     "type": "git",
     "url": "git://github.com/pgherveou/winston-email"
   },
-  "keywords": ["logging", "winston", "email"],
+  "keywords": [
+    "logging",
+    "winston",
+    "email"
+  ],
   "dependencies": {
     "nodemailer": "1.x"
   },
   "peerDependencies": {
-    "winston"   : "*"
+    "winston": "*"
   },
   "main": "./lib/index.js"
 }
