--- a/package.json
+++ b/package.json
@@ -18,5 +18,17 @@
   "peerDependencies": {
     "winston": "*"
   },
-  "main": "./lib/index.js"
+  "main": "./lib/index.js",
+  "scripts": {
+    "test": "mocha"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "chai-as-promised": "^5.3.0",
+    "lodash": "^4.13.1",
+    "mocha": "^2.5.3",
+    "nodemailer-stub-transport": "^1.0.0",
+    "sinon": "^1.17.4",
+    "sinon-chai": "^2.8.0"
+  }
 }
